fix: restore malformed html in help text

--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -355,7 +355,9 @@
     <dt>u-OS Config</dt>
     <dd>Pick the connection node that holds host, port and OAuth credentials.</dd>
     <dt>Provider ID</dt>
-    <dd>Provider to read. The drop-down lists every provider returned by the      <p><strong>Attributes:</strong></p>
+    <dd>Provider to read. The drop-down lists every provider returned by the Data Hub API.</dd>
+  </dl>
+  <p><strong>Attributes:</strong></p>
   <dl>
     <dt>Provider & Variables</dt>
     <dd>Click the <strong>Refresh</strong> button to load the lists. Use the Input Port (e.g. inject node) to trigger manual snapshots.</dd>
