--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   RED.nodes.registerType('datahub-output', {
-    category: 'DataHub-NATS',
-    color: '#ff9f43',
+    category: 'u-OS DataHub NATS',
+    color: '#ff9900',
     defaults: {
       name: { value: '' },
       connection: { type: 'uos-config', required: true },
@@ -12,8 +12,9 @@
     icon: "white/datahub-output.svg",
     oneditprepare: function () { },
     label: function () {
-      return this.name || `Output ${this.providerId || ''}`;
+      return this.name || `DataHub - OUT ${this.providerId || ''}`;
     },
+    paletteLabel: "DataHub - OUT",
     labelStyle: function () {
       return this.name ? 'node_label_italic' : '';
     }
