refactor: simplify config UI and help texts

--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -145,13 +145,8 @@
     
     <h4>1. Config Node</h4>
     <p>
-        Select your u-OS connection settings. If you don't have one yet:
+        Select your u-OS connection settings. If you haven't created one yet, click the <b>pencil icon</b> next to "Config" to create a new uos-config node.
     </p>
-    <ul>
-        <li>Click the <b>pencil icon</b> → <b>Add new uos-config</b></li>
-        <li>Enter Host, Port, and OAuth credentials from u-Control</li>
-        <li>Test the connection before saving</li>
-    </ul>
 
     <h4>2. Provider ID</h4>
     <p>
