fix: change Write node color to orange (#ff9900)

--- a/nodes/datahub-write.html
+++ b/nodes/datahub-write.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('datahub-write', {
         category: 'u-OS DataHub NATS',
-        color: '#e74c3c',
+        color: '#ff9900',
         defaults: {
             name: { value: "" },
             connection: { type: "uos-config", required: true },
