docs: fix OAuth client creation path (Control Center)

--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -149,9 +149,9 @@
   <h4>1. Create OAuth Client in u-Control</h4>
   <p>Before configuring Node-RED, create an OAuth client on your u-Control device:</p>
   <ol>
-    <li>Open the <b>u-Control Web Interface</b> (e.g. <code>http://192.168.10.100</code>)</li>
-    <li>Go to <b>System</b> → <b>Access Control</b> → <b>OAuth Clients</b></li>
-    <li>Click <b>"Add Client"</b></li>
+    <li>Open the <b>u-OS Web Interface</b> (e.g. <code>http://192.168.10.100</code>)</li>
+    <li>Go to <b>u-OS Control Center</b> → <b>Identity & access</b> → <b>Clients</b></li>
+    <li>Click <b>"Add client"</b></li>
     <li>Enter a <b>Name</b> (e.g. <code>nodered</code>)</li>
     <li>Select <b>all</b> <code>hub.variables.*</code> scopes:
       <ul>
