docs: complete OAuth path fix (Write node help)

--- a/nodes/datahub-write.html
+++ b/nodes/datahub-write.html
@@ -116,7 +116,7 @@ return msg;</code></pre>
 
     <h4>Permission Denied</h4>
     <ul>
-        <li>Check OAuth client scopes in u-OS (System → Access Control → OAuth Clients)</li>
+        <li>Check OAuth client scopes in u-OS (u-OS Control Center → Identity & access → Clients)</li>
         <li>Verify provider allows writes (some system providers are read-only)</li>
     </ul>
 
