feat: v0.2.0 - Variable Key support, custom icons, example flows
- Write Node: Variable Key support with auto-resolution
- Custom SVG icons for Read/Provider/Write nodes
- Example flows: basic-read-write.json, advanced-provider.json
- Provider definition caching (5min TTL)

--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -9,7 +9,7 @@
     },
     inputs: 1,
     outputs: 1,
-    icon: "white/datahub-output.svg",
+    icon: "white/datahub-provider.svg",
     oneditprepare: function () { },
     label: function () {
       return this.name || `DataHub - OUT ${this.providerId || ''}`;
