--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('datahub-output', {
-    category: 'u-OS DataHub NATS',
+    category: 'Weidmueller DataHub',
     color: '#ff9900',
     defaults: {
       name: { value: '' },
@@ -12,7 +12,7 @@
     icon: "white/datahub-provider.svg",
     oneditprepare: function () { },
     label: function () {
-      return this.name || `DataHub - OUT ${this.providerId || ''}`;
+      return this.name || `DataHub - Provider ${this.providerId || ''}`;
     },
     paletteLabel: "DataHub - Provider",
     labelStyle: function () {
