fix: v0.2.9 Final Fixes

--- a/nodes/datahub-write.html
+++ b/nodes/datahub-write.html
@@ -11,7 +11,7 @@
         },
         inputs: 1,
         outputs: 1,
-        icon: "white/datahub-write.svg",
+        icon: "datahub-write.svg",
         label: function () {
             return this.name || "DataHub - Write";
         },
