--- a/nodes/datahub-input.html
+++ b/nodes/datahub-input.html
@@ -12,7 +12,7 @@
     },
     inputs: 1,
     outputs: 1,
-    icon: "white/datahub-read.svg",
+    icon: "datahub-read.svg",
     label: function () {
       if (this.name) return this.name;
       return "DataHub - Read";
