--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -9,7 +9,7 @@
     },
     inputs: 1,
     outputs: 1,
-    icon: "white/datahub-provider.svg",
+    icon: "datahub-provider.svg",
     oneditprepare: function () { },
     label: function () {
       return this.name || `DataHub - Provider ${this.providerId || ''}`;
