feat(ux): default provider id to client id if empty

--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -31,8 +31,8 @@
     <input type="text" id="node-input-connection">
   </div>
   <div class="form-row">
-    <label for="node-input-providerId"><i class="fa fa-id-badge"></i> Provider ID</label>
-    <input type="text" id="node-input-providerId" placeholder="Leave empty to use Client ID (recommended)">
+    <label for="node-input-providerId"><i class="fa fa-tag"></i> Provider ID</label>
+    <input type="text" id="node-input-providerId" placeholder="Leave empty to use Client ID">
   </div>
 </script>
 
